apps/coder/manifest.yaml
---
# Source: coder/charts/coder/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder
  namespace: coder
  labels:
    helm.sh/chart: coder-2.34.1
    app.kubernetes.io/name: coder
    app.kubernetes.io/instance: coder
    app.kubernetes.io/part-of: coder
    app.kubernetes.io/version: "2.34.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    {}
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: "http"
      port: 80
      targetPort: "http"
      protocol: TCP
  selector:
    app.kubernetes.io/name: coder
    app.kubernetes.io/instance: coder
---
# Source: coder/charts/coder/templates/coder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: coder
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coder
    app.kubernetes.io/part-of: coder
    app.kubernetes.io/version: 2.34.1
    helm.sh/chart: coder-2.34.1
  name: coder
  namespace: coder
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: coder
      app.kubernetes.io/name: coder
  template:
    metadata:
      annotations:
        app.kubernetes.io/component: coderd
      labels:
        app.kubernetes.io/instance: coder
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: coder
        app.kubernetes.io/part-of: coder
        app.kubernetes.io/version: 2.34.1
        helm.sh/chart: coder-2.34.1
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - coder
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - args:
        - server
        command:
        - /opt/coder
        image: ghcr.io/coder/coder:v2.34.1
        imagePullPolicy: IfNotPresent
        lifecycle: {}
        name: coder
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
        resources:
          limits:
            cpu: 2000m
            memory: 4096Mi
          requests:
            cpu: 2000m
            memory: 4096Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts: []
      restartPolicy: Always
      serviceAccountName: coder
      terminationGracePeriodSeconds: 60
      volumes: []
---
# Source: coder/templates/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: coder-http-upgrade
  namespace: coder
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: coder-homelab
  httpUpgrade:
    - type: "derp"
    - type: "websocket"
---
# Source: coder/charts/homelab/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder-homelab
  labels:
    helm.sh/chart: homelab-0.1.30
    app.kubernetes.io/name: homelab
    app.kubernetes.io/instance: coder
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "coder.int.kyledev.co"
    - "coder.ts.kyledev.co"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ""
          kind: Service
          name: coder
          port: 80
          weight: 1
